test/distributions/robust/arithmetic/reindexing/test_strided_reindex3.good
test_strided_reindex3.chpl:7: error: halt reached - array reindex cannot redistribute array
