test/distributions/robust/arithmetic/reindexing/test_strided_reindex3.future
semantic: can a reindex operation change an array's distribution?

Should this be an error or should it work somehow?
